--- a/PikMap/Base.lproj/Main.storyboard
+++ b/PikMap/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PikMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,39 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ogP-eF-lSZ"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BeK-ql-nWt">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="WgM-ko-cUZ"/>
+                                    <constraint firstAttribute="width" constant="64" id="w03-5v-mbh"/>
+                                </constraints>
+                                <state key="normal" image="add_photo.png"/>
+                                <connections>
+                                    <action selector="postPik:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iNo-dw-oRy"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ogP-eF-lSZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="28Q-cE-goC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BeK-ql-nWt" secondAttribute="bottom" constant="25" id="2Ew-Ge-wh1"/>
+                            <constraint firstItem="BeK-ql-nWt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="5SA-Vr-lVU"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ogP-eF-lSZ" secondAttribute="bottom" id="ocO-ei-3FY"/>
+                            <constraint firstAttribute="trailing" secondItem="ogP-eF-lSZ" secondAttribute="trailing" id="s0k-Qu-Mqg"/>
+                            <constraint firstItem="ogP-eF-lSZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="z6k-DZ-OLb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="ogP-eF-lSZ" id="Das-5Q-nhS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="131.78410794602701"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="add_photo.png" width="60" height="57"/>
+    </resources>
 </document>
