--- a/PikMap/Base.lproj/LaunchScreen.storyboard
+++ b/PikMap/Base.lproj/LaunchScreen.storyboard
@@ -33,13 +33,23 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Made with ❤️ in Stockton, CA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcW-Uo-7qL">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Wan-Rj-CEK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="13"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.385581483" green="0.51742764080000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="dcW-Uo-7qL" secondAttribute="bottom" constant="20" id="F3Y-6u-Vs1"/>
                             <constraint firstItem="z3X-6U-kZ5" firstAttribute="top" secondItem="xTS-rf-7Wy" secondAttribute="bottom" constant="15" id="LMK-KO-AA3"/>
                             <constraint firstItem="xTS-rf-7Wy" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="166" id="PKZ-Bm-dqH"/>
                             <constraint firstItem="xTS-rf-7Wy" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="dfe-6b-yfq"/>
                             <constraint firstItem="z3X-6U-kZ5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gqQ-tn-owX"/>
+                            <constraint firstItem="dcW-Uo-7qL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kM9-La-bgc"/>
                         </constraints>
                     </view>
                 </viewController>
